<resources>
    <string name="app_name">expenseTracking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noOfRecord">No. of Records</string>
    <string name="totalExpenses">Total Expenses</string>
    <string name="zero">0</string>
    <string name="zeroCost">$0.00</string>
    <string name="ExpenseSummary">Expense Summary</string>
    <string name="addExp">Add Expense</string>
    <string name="Name">Name:</string>
    <string name="amount">Amount:</string>
    <string name="Date">Date:</string>
    <string name="Category">Category:</string>
    <string name="textviewExpName">TextView</string>
    <string name="textviewExpAmount">TextView</string>
    <string name="textviewExpDate">TextView</string>
    <string name="textviewExpCat">TextView</string>
</resources>